<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="weatherMainData" type="com.nonofce.android.howistheweather.data.response.Main"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_main"
            tools:context=".MainActivity">

        <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/currentTempLbl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textView2"
                app:layout_constraintVertical_bias="0.455" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.153" android:textAlignment="textEnd"/>
        <TextView
                android:text="@{Double.toString(weatherMainData.temp)}"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/currentTemp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.455" android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.241"/>
        <TextView
                android:text="@string/pressure"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.153" android:textAlignment="textEnd"/>
        <TextView
                android:text="@{Double.toString(weatherMainData.pressure)}"
                android:layout_height="wrap_content"
                android:layout_width="100dp"
                android:id="@+id/pressureCtrl"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/currentTemp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.241"/>
        <TextView
                android:text="@string/humidity"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.153" android:textAlignment="textEnd"/>
        <TextView
                android:text="@{Double.toString(weatherMainData.humidity)}"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/humidityCtrl" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/pressureCtrl"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.241"/>
        <TextView
                android:text="@string/minimum_temperature"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.153" android:textAlignment="textEnd"/>
        <TextView
                android:text="@{Double.toString(weatherMainData.temp_min)}"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/minimunTemp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/humidityCtrl"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.241"/>
        <TextView
                android:text="@string/maximum_temperature"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.153" android:textAlignment="textEnd"/>
        <TextView
                android:text="@{Double.toString(weatherMainData.temp_max)}"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/maximumTemp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/minimunTemp"
                android:textStyle="bold"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.241"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@android:drawable/ic_menu_gallery"
                android:id="@+id/weatherCondition" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintVertical_bias="1.0"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="1.0"
                android:contentDescription="@string/current_weather_condition"/>
        <Spinner
                android:layout_width="319dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/citySpinner" app:layout_constraintHorizontal_bias="0.478"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/weatherCondition"
                app:layout_constraintVertical_bias="0.668"/>
        <TextView
                android:text="@string/world_cities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.097" android:textStyle="bold"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/citySpinner" app:layout_constraintVertical_bias="0.819"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>